# FMT-SimGen

./: .gitignore  AGENTS.md  CLAUDE.md  COMPLETION_STATUS.md  README.md  _tmp_check_comparison.py  _tmp_check_gt_consistency.py  _tmp_check_viz_issues.py  _tmp_coord_check.py  _tmp_debug_de_mcx.py  _tmp_debug_de_mcx2.py  _tmp_debug_proj2.py  _tmp_debug_surface_surface.py  _tmp_diagnose_3d.py  _tmp_diagnose_de_mcx.py  _tmp_inspect_gt.py  _tmp_trace_gtvox.py  check_mcx_progress.sh  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
config/: default.yaml  gaussian_1000.yaml  mesh_20k.yaml  small_src_5samples.yaml  small_uniform_5samples.yaml  test_single.yaml  trunk_v2_20260420_100948.yaml  trunk_v2_20260420_102409.yaml  trunk_v2_20260421_161440.yaml  trunk_v2_override.yaml  trunk_v2_roi38.yaml  trunk_v2_roi38_multi.yaml  uniform_1000.yaml  uniform_1000_20k.yaml  uniform_1000_v2.yaml  verify_uniform_3.yaml
docs/: COORDINATE_SYSTEM.md  frame_literal_audit.md
fmt_simgen/: __init__.py  frame_contract.py  graph_laplacian.py  io.py  mcx_config.py  mcx_projection.py  mcx_runner.py  mcx_source.py  mcx_volume.py  subject.py  view_config.py
pilot/: __init__.py
scripts/: 01_generate_mesh.py  02_generate_dataset.py  02b_generate_more_samples.py  03_regenerate_dataset.py  04_stratified_split.py  05_verify_frame_consistency.py  audit_radius_bin.py  backfill_provenance.py  check_doc_consistency.py  check_frame_literals.py  continue_uniform_1000_v2.py  de_mcx_final_comparison.py  de_surface_to_mcx_projection.py  diagnose_dataset.py  export_paraview.py  qa_sample.py  (+40 more)
(+317 files in other folders)
